--- a/src/styles/Find.module.css
+++ b/src/styles/Find.module.css
@@ -5,20 +5,18 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    margin-top: 83px;
-    margin-bottom:71px;
+    margin: 40px 0;
 }
 
 .pageContainer {
     width: 619px;
-    height: 755px;
+    height: 673px;
     flex-shrink: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #FFFFFF;
-    margin:20px 136px;
 }
 
 .tabContainer {
