--- a/src/styles/Join.module.css
+++ b/src/styles/Join.module.css
@@ -98,6 +98,13 @@
     font-weight: 700;
 }
 
+.submitButton:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
 .notificationMessage {
     font-size: 14px;
     margin-top: 5px;
@@ -144,6 +151,13 @@
     font-weight: 700;
 }
 
+.emailButton:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
 .verifiedText {
     color: #57C5B6;
     font-family: Noto Sans KR, sans-serif;
@@ -172,3 +186,11 @@
     cursor: pointer;
     margin-left: 10px;
 }
+
+.verifyButton:disabled {
+    background-color: #cccccc;
+    color: #666666;
+    cursor: not-allowed;
+    opacity: 0.6;
+}
+
