--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -46,7 +46,6 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.5);
-    /* background-color: rgba(0, 0, 0, 0.0);*/
     display: flex;
     justify-content: center;
     align-items: center;
@@ -305,6 +304,103 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.noResults {
+    color: #555;
+    font-size: 16px;
+    text-align: center;
+    margin: 20px 0;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.placeItem {
+    display: flex;
+    margin-bottom: 20px;
+    padding: 15px;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    align-items: center;
+    justify-content: space-between;
+    background-color: #fff;
+    transition: box-shadow 0.3s ease;
+}
+
+.placeItem:hover {
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+}
+
+.placeThumbnail {
+    margin-right: 20px;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #f0f0f0;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.thumbnailImage {
+    border-radius: 8px;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.noImage {
+    position: relative;
+    width: 749px;
+    height: 512px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    background-color: #e0e0e0;
+    border: 1px dashed #ccc;
+    color: #888;
+    font-size: 18px;
+}
+
+.placeInfo {
+    position: relative;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.bookmarkButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+}
+
+.placeName {
+    font-size: 18px;
+    font-weight: bold;
+    font-family: 'Noto Sans KR', sans-serif;
+    color: #333;
+    margin-left: 0;
+}
+
+.placeAddress,
+.placeDetailAddress {
+    line-height: 2em;
+    margin: 2px 0;
+    color: #555;
+    font-size: 14px;
+}
+
+.placeDetailAddress {
+    display: flex;
+    align-items: center;
 }
 
 /* 일정만들기 3번 : 채팅 */
