--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -62,13 +62,9 @@
 }
 
 .detailTitle {
+    margin-left:20px;
     font-size: 24px;
     margin-bottom: 20px;
-    display: flex;
-}
-
-.inputGroup {
-    padding:21px;
     display: flex;
 }
 
@@ -136,6 +132,7 @@
 }
 
 .tabContainer {
+    margin-left:20px;
     display: flex;
     margin-bottom: 20px;
 }
@@ -169,6 +166,8 @@
 }
 
 .inputGroup {
+    padding:21px;
+    display: flex;
     margin-bottom: 20px;
     width: 480px;
 }
@@ -401,6 +400,69 @@
 .placeDetailAddress {
     display: flex;
     align-items: center;
+}
+
+.distanceInfo {
+    display: flex;
+    justify-content: flex-end;
+    gap: 10px;
+    color: #555;
+    font-size: 14px;
+}
+
+.addButton {
+    background-color: #76adac;
+    color: #fff;
+    font-size: 16px;
+    font-family: 'Noto Sans KR', sans-serif;
+    padding: 12px 20px;
+    border: none;
+    cursor: pointer;
+}
+
+.travelSearchContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+    gap:10px;
+}
+
+.travelSearchContainer input {
+    width: 350px;
+    padding: 10px 15px;
+    font-size: 16px;
+    border-radius: 25px;
+    border: 1px solid #ccc;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease;
+}
+
+.travelSearchContainer input:focus {
+    border-color: #76adac;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    outline: none;
+}
+
+.travelSearchContainer button {
+    padding: 10px 20px;
+    background-color: #76adac;
+    color: #fff;
+    border: none;
+    border-radius: 25px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: all 0.3s ease;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.travelList {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* 반응형으로 칸을 채움 */
+    gap: 20px;
 }
 
 /* 일정만들기 3번 : 채팅 */
