--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -442,7 +442,7 @@
 
 .sliderImageContainer {
     width: 100%;
-    height: auto;
+    height:auto;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -451,8 +451,9 @@
 }
 
 .sliderImageContainer img {
-    max-width: 100%;
-    max-height: 100%;
+    width:749px;
+    object-fit: contain!important;
+    aspect-ratio: 3 / 2!important;
 }
 
 .sliderButton {
