--- a/src/styles/Layout.module.css
+++ b/src/styles/Layout.module.css
@@ -1,7 +1,6 @@
 .main {
   color:#000000;
-  width: 100%;
-  max-width: 1920px;
+  width: 100vw;
   flex-shrink: 0;
   backdrop-filter: blur(2px);
   display: flex;
@@ -33,8 +32,7 @@
 }
 
 .content {
-  width: 100%;
-  max-width: 1920px;
+  width: 100vw;
   height: 1336px;
   flex-grow: 1;
 }
@@ -42,9 +40,8 @@
 .footer {
   margin-top: 64px;
   padding-top: 5px;
-  width: 100%;
+  width: 100vw;
   height: 324px;
-  max-width: 1920px;
   flex-shrink: 0;
   background: #363636;
   overflow-y: hidden;
