--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -1,7 +1,7 @@
 /* 일정 만들기 1/3 분할 */
 .layoutContainer {
     display: flex;
-    width:100%;
+    width:100vw;
     height: 100%;
 }
 
@@ -14,7 +14,7 @@
     border-radius: 0 0 0 200px;
     background: linear-gradient(264deg, #edf9f7 3.98%, #f1f5ff 98.44%);
     top: 0;
-    left: 61.8%;
+    left: 66%;
     transform: translateX(-50%);
     z-index: -1;
 }
@@ -215,8 +215,8 @@
     font-size: 18px;
     font-family: 'Noto Sans KR', sans-serif;
     transition: background-color 0.3s ease;
-    margin-bottom: 30px;
-    float:left;
+    margin: 20px 0;
+    float:right;
 }
 
 .pageContainer {
@@ -229,14 +229,13 @@
 }
 
 .tabContainer {
-    margin-left:20px;
     display: flex;
     margin-bottom: 20px;
 }
 
 .tabButton {
     display: flex;
-    width: 240px;
+    width: 360px;
     height: 60px;
     flex-direction: column;
     align-items: center;
@@ -266,12 +265,11 @@
     padding:21px;
     display: flex;
     margin-bottom: 20px;
-    width: 480px;
+    width: 560px;
 }
 
 .input {
     padding: 12px;
-    width: 480px;
     border-radius: 5px;
     border: 1px solid #ccc;
     font-size: 16px;
@@ -558,8 +556,6 @@
     padding: 0;
     margin: 0;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* 반응형으로 칸을 채움 */
-    gap: 20px;
 }
 
 /* 일정만들기 3번 : 채팅 */
