--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -60,6 +60,29 @@
   display: flex;
 }
 
+.allSchedule,
+.allShareSchedule {
+  width: 105.075px;
+  height: 32px;
+  flex-shrink: 0;
+  border-radius: 25px;
+  background: #a7cdcc;
+  flex-direction: column;
+  justify-content: center;
+  color: #fff;
+  text-align: center;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin: 0 5px;
+}
+
+.allShareSchedule {
+  background: #ededed;
+  color: #000000;
+}
+
 .inputField {
   flex: 1;
   width: 722px;
@@ -114,6 +137,12 @@
 }
 
 /*일정 만들기 : 일정 만들기 최근 목록 틀*/
+.createContainer {
+  margin-left: 10%;
+  width: 1296px;
+  height: 1080px;
+}
+
 .createContainer::before {
   content: '';
   position: absolute;
@@ -165,36 +194,99 @@
   flex-direction: column;
 }
 
+.deleteModal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  padding: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+
+.deleteModal button {
+  margin: 0 10px;
+}
+
 .scheduleList {
-  margin-top: 150px;
+  margin-top: 40px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 20px;
 }
 
 .scheduleItem {
+  position: relative;
   display: flex;
   flex-direction: column;
-  width: 300px;
-  border: 1px solid #ddd;
-  border-radius: 10px;
-  overflow: hidden;
+  margin-bottom: 20px;
   transition: box-shadow 0.3s ease;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-.scheduleItem:hover {
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+.scheduleItem:hover .hoverMenu {
+  opacity: 1;
+}
+
+.hoverMenu {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 256px;
+  height: 158px;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.threeDots {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  padding: 5px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.deleteMenu {
+  position: absolute;
+  top: 40px;
+  right: 10px;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+
+.deleteButton {
+  background-color: #f44336;
+  color: white;
+  padding: 8px 16px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.deleteButton:hover {
+  background-color: #d32f2f;
 }
 
 .scheduleImage {
-  width: 100%;
-  height: 180px;
   object-fit: cover;
+  width: 256px;
+  height: 158px;
 }
 
 .scheduleContent {
-  padding: 15px;
+  padding: 5px;
 }
 
 .scheduleName {
@@ -218,7 +310,7 @@
 
 /* 일정만들기 : 일정 기본 틀 */
 .scheduleUpdateBtn {
-  background-color: #0070f3;
+  background-color: #76adac;
   color: white;
   padding: 12px 24px;
   border: none;
@@ -466,15 +558,13 @@
 }
 
 .noImage {
+  width: 256px;
+  height: 158px;
   position: relative;
-  width: 749px;
-  height: 512px;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-radius: 8px;
   background-color: #e0e0e0;
-  border: 1px dashed #ccc;
   color: #888;
   font-size: 18px;
 }
