--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -196,10 +196,10 @@
 
 .deleteModal {
   position: fixed;
-  top: 50%;
+  top: 25%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
+  background-color: #ffffff;
   padding: 20px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
