--- a/src/styles/Schedule.module.css
+++ b/src/styles/Schedule.module.css
@@ -171,7 +171,7 @@
   font-size: 30px;
   font-style: normal;
   line-height: 15px;
-  margin-left: 38%;
+  margin-left: 36%;
 }
 
 .scheduleExplainP {
@@ -180,7 +180,7 @@
   font-weight: 500;
   text-align: center;
   justify-content: center;
-  margin-left: 32%;
+  margin-left: 29%;
 }
 
 .createAddButton {
@@ -226,20 +226,19 @@
 .scheduleCounterShare {
   display: inline-flex;
   align-items: center;
-  color: #76adac;
-  margin-right: 20px;
+  margin-right: 100px;
   font-size: 22px;
   font-weight: 700;
   word-wrap: break-word;
   margin-top: 77px;
   margin-bottom: 17px;
-  margin-left: -90px;
+  margin-left: -80px;
 }
 
 .scheduleCounter .counterNumber,
 .scheduleCounterShare .counterNumber {
   display: inline-block;
-  background-color: #76adac;
+  background-color: #666666;
   font-size: 18px;
   font-weight: 700;
   word-wrap: break-word;
@@ -251,13 +250,15 @@
   height: 25px;
 }
 
-.scheduleCounterShare {
-  color: #666666;
-  margin-left: 10px;
+.scheduleCounter.activeTab,
+.scheduleCounterShare.activeTab {
+  color: #76adac;
 }
 
-.scheduleCounterShare .counterNumber {
-  background-color: #666666;
+.scheduleCounter.activeTab .counterNumber,
+.scheduleCounterShare.activeTab .counterNumber {
+  background-color: #76adac;
+  color: #ffffff;
 }
 
 .scheduleTitle {
@@ -1047,18 +1048,15 @@
 
 /* 일정 목록이 없을 때 표시하는 메시지 컨테이너 */
 .noScheduleContainer {
+  width: 100%;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 30px;
+  margin-left: 600px;
   color: #555;
-}
-
-.noScheduleIcon {
-  width: 80px;
-  height: 80px;
-  margin-bottom: 20px;
 }
 
 .noScheduleMessage {
