--- a/src/styles/Travel.module.css
+++ b/src/styles/Travel.module.css
@@ -358,8 +358,9 @@
 }
 
 .sliderImageContainer {
+  background-color: #f0f0f0;
   width: 100%;
-  height: 505px;
+  height: 530px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -526,7 +527,7 @@
 
 .rightSection {
   background-color: #ffffff;
-  padding: 20px;
+  padding: 0 0 20px 20px;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   display: flex;
